# Spartan2

./: .gitignore  Cargo.toml  PR_DESCRIPTION.md  README.md  rustfmt.toml
.github/workflows/: claude.yml  rust.yml
.john/: ALGORITHMS.md  CODING_STYLE.md  COMMIT_MESSAGE_STYLE.md  FASTER_SUMCHECK.md
benches/: bench.rs  pcs_comparison.rs  sha256.rs  sha256_neutronnova.rs  sha256_spartan.rs  sumcheck.rs
examples/: BENCHMARK_RESULTS.md  accum_bench.rs  compute_barrett_constants.rs  less_than.rs  logup_lookup.rs  neutronnova_sha256_benchmark.rs  neutronnova_sha256_trace.rs  sha256.rs  sha256_bls12_381_dory.rs  sha256_brakedown.rs  sha256_chain_benchmark.rs  sha256_mkzg.rs  sha256_neutronnova.rs  sha256_spartan.rs  spartan_timing_phases.rs  sumcheck_sha256_equivalence.rs  sumcheck_sweep.rs  timing.rs
examples/benchmarks/Full Pipeline (BLS12-381)/Dory/base/: benchmark.json  sample.json
examples/benchmarks/Full Pipeline (BLS12-381)/Dory/new/: estimates.json  tukey.json
examples/benchmarks/Full Pipeline (BLS12-381)/Dory/report/: index.html
examples/benchmarks/Full Pipeline (BLS12-381)/Hyrax/base/: sample.json  tukey.json
examples/benchmarks/Full Pipeline (BLS12-381)/Hyrax/new/: benchmark.json  estimates.json
examples/benchmarks/Full Pipeline (BLS12-381)/Hyrax/report/: index.html
examples/benchmarks/Full Pipeline (BLS12-381)/report/: index.html
examples/benchmarks/PCS Prove (BLS12-381)/Dory/base/: benchmark.json  estimates.json  sample.json  tukey.json
examples/benchmarks/PCS Prove (BLS12-381)/Dory/report/: index.html
examples/benchmarks/PCS Prove (BLS12-381)/Hyrax/base/: sample.json  tukey.json
examples/benchmarks/PCS Prove (BLS12-381)/Hyrax/new/: benchmark.json  estimates.json
examples/benchmarks/PCS Prove (BLS12-381)/Hyrax/report/: index.html
examples/benchmarks/PCS Prove (BLS12-381)/report/: index.html
examples/benchmarks/PCS Setup (BLS12-381)/Dory/base/: estimates.json  sample.json  tukey.json
examples/benchmarks/PCS Setup (BLS12-381)/Dory/new/: benchmark.json
examples/benchmarks/PCS Setup (BLS12-381)/Dory/report/: index.html
examples/benchmarks/PCS Setup (BLS12-381)/Hyrax/base/: tukey.json
examples/benchmarks/PCS Setup (BLS12-381)/Hyrax/new/: benchmark.json  estimates.json  sample.json
examples/benchmarks/PCS Setup (BLS12-381)/Hyrax/report/: index.html
examples/benchmarks/PCS Setup (BLS12-381)/report/: index.html
examples/benchmarks/PCS Verify (BLS12-381)/Dory/base/: sample.json  tukey.json
examples/benchmarks/PCS Verify (BLS12-381)/Dory/new/: benchmark.json  estimates.json
examples/benchmarks/PCS Verify (BLS12-381)/Dory/report/: index.html
examples/benchmarks/PCS Verify (BLS12-381)/Hyrax/base/: benchmark.json  estimates.json
examples/benchmarks/PCS Verify (BLS12-381)/Hyrax/new/: sample.json  tukey.json
examples/benchmarks/PCS Verify (BLS12-381)/Hyrax/report/: index.html
examples/benchmarks/PCS Verify (BLS12-381)/report/: index.html
examples/benchmarks/report/: index.html
examples/circuits/: mod.rs
examples/circuits/sha256/: bellpepper.rs  chain.rs  mod.rs  small.rs
examples/common/: mod.rs
examples/cube/: cube.circom  cube.r1cs  cube.wasm
src/: accumulator_index.rs  accumulators.rs  cli.rs  constants.rs  csr.rs  digest.rs  eq_linear.rs  errors.rs  hash.rs  lagrange.rs  lib.rs  macros.rs  main.rs  mat_vec_mle.rs  math.rs  neutron.rs  neutronnova.rs  neutronnova_zk.rs  nifs.rs  r1cs.rs  small_field.rs  small_neutronnova_zk.rs  small_sumcheck.rs  snark.rs  spartan.rs  spartan_accumulator_input_polynomial.rs  spartan_relaxed.rs  spartan_zk.rs  sumcheck.rs  thread_state_accumulators.rs  twist.rs  utils.rs  wide_limbs.rs  zk.rs
src/arkworks/: README.md  mod.rs  snark.rs
src/bellpepper/: mod.rs  r1cs.rs  shape_cs.rs  solver.rs  test_r1cs.rs  test_shape_cs.rs
src/bellperson/: mod.rs  r1cs.rs
src/big_num/: barrett.rs  delayed_reduction.rs  field_reduction_constants.rs  limbs.rs  macros.rs  mod.rs  montgomery.rs  small_value.rs  small_value_field.rs  wide_mul.rs
src/circom/: mod.rs
src/gadgets/: addmany.rs  cubic_chain.rs  mod.rs  small_boolean.rs  small_multi_eq.rs  small_sha256.rs  small_uint32.rs
src/lagrange_accumulator/: accumulator.rs  accumulator_builder.rs  basis.rs  csr.rs  delay_modular_reduction_mode.rs  domain.rs  eq_round.rs  evals.rs  extension.rs  index.rs  mat_vec_mle.rs  mod.rs  thread_state.rs
src/linear_code/: arithmetic.rs  brakedown.rs  mod.rs
src/polys/: eq.rs  mod.rs  multilinear.rs  power.rs  univariate.rs
src/provider/: ark.rs  ark_serde.rs  bls12_381.rs  bn254.rs  bn256_grumpkin.rs  hyrax_pc.rs  ipa_pc.rs  keccak.rs  mod.rs  msm.rs  pasta.rs  pedersen.rs  pt256.rs  secp_secq.rs  traits.rs
src/provider/pcs/: brakedown.rs  dory_pc.rs  hyrax_pc.rs  ipa.rs  ipa_hybrid.rs  ipa_log.rs  ipa_pc.rs  merkle_mle_pc.rs  mkzg.rs  mod.rs
src/r1cs/: folds.rs  mod.rs  sparse.rs
src/sha256_circuits/: mod.rs  small.rs  small_chain.rs
src/small_constraint_system/: bridge.rs  circuit.rs  mod.rs
src/small_field/: barrett.rs  delayed_reduction.rs  field_reduction_constants.rs  impls.rs  limbs.rs  mod.rs  montgomery.rs  small_value_field.rs  wide_mul.rs
src/spartan/: math.rs  mod.rs  polynomial.rs  ppsnark.rs  snark.rs  sumcheck.rs  upsnark.rs
src/spartan/polys/: eq.rs  mod.rs  multilinear.rs  power.rs  univariate.rs
src/timing/: mod.rs
src/traits/: circuit.rs  commitment.rs  evaluation.rs  folding.rs  mod.rs  pcs.rs  snark.rs  transcript.rs  upsnark.rs
tests/: hash_mle_pcs.rs
